--- a/events_site/events/templates/events/list.html
+++ b/events_site/events/templates/events/list.html
@@ -1,30 +1,30 @@
 <!doctype html>
-<html lang="pt">
+<html lang="en">
   <head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'events/page_style.css' %}">
     <meta charset="utf-8">
-    <title>Eventos</title>
+    <title>Events</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
-  <body class="container py-4">
-    <h1 class="mb-4">Eventos</h1>
-    <ul class="list-group">
-      {% for e in eventos %}
-        <li class="list-group-item">
-          <strong>{{ e.categoria }}</strong><br>
-            {{ e.data_inicio }} {% if e.localizacao %}- {{ e.localizacao }}{% endif %}
-        </li>
+  <body>
+    <div class="container py-4">
+    <h1 class="mb-4">Events</h1>
+    <div class="event-list location-list-highlight mb-5"> <!-- Adiciona margem inferior -->
+      {% for e in events %}
+        <div style="margin-bottom: 1rem;">
+          <strong class="name-highlight">{{ e.name }}</strong><br>
+          {{ e.category }}<br>
+          {{ e.start_date }} {% if e.location %}- {{ e.location.name }}{% endif %}
+        </div>
       {% empty %}
-        <li class="list-group-item">Sem eventos.</li>
+        <div>No events found.</div>
       {% endfor %}
-    </ul>
+      </div>
+
+    <a href="{% url 'location_list' %}" class="btn btn-secondary mb-3">View locations</a>
+    <a href="{% url 'create_location' %}" class="btn btn-primary mb-3">Create New Location</a>
+    <a href="{% url 'create_event' %}" class="btn btn-primary mb-3">Create New Event</a>
+    </div>
   </body>
 </html>
-<h1 class="mb-4">Eventos</h1>
-<a href="{% url 'criar_categoria' %}" class="btn btn-primary mb-3">Criar nova categoria</a>
-<ul class="list-group">
-  {% for e in eventos %}
-    <li class="list-group-item">{{ e }}</li>
-  {% empty %}
-    <li class="list-group-item">Sem eventos.</li>
-  {% endfor %}
-</ul>
